<resources>
    <string name="app_name">Main</string>


    <string name="common_tips_notnull">输入内容不能为空</string>
    <string name="common_tips_wating">敬请期待</string>
    <string name="common_tips_pleasewaiting">请稍后操作</string>
    <!-- 全局-->
    <string name="agree">同 意</string>"
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="app_need_access_storage">APP需要访问您的存储空间</string>
    <string name="allow_storage_permission_please">请在权限管理中允许存储空间权限</string>
    <!-- 网络 -->
    <string name="network_connect_error">网络连接异常</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="network_no_host">请检查网络</string>
    <string name="no_route_to_host">无法连接到服务器</string>
    <string name="network_response_code_error">服务器状态码异常：</string>
    <string name="bad_network_view_tip">您的网络不给力，点击屏幕可重新加载</string>
    <string name="load_failed_click_to_reload">加载失败，点击可重新加载</string>
    <string name="unknown_error">发生未知错误</string>

    <!--    公用的toast-->
    <string name="toast_isDeveloping">正在开发,敬请期待</string>
    <string name="toast_deniedPermission">拒绝授权,可能会影响后续功能的使用</string>

    <!--    登录页面-->
    <string name="transition_logo_splash">transition_logo_splash</string>
    <string name="account_number">账号</string>
    <string name="account_pwd">密码</string>
    <string name="login">登录</string>
    <string name="login_register">注册账号</string>
    <string name="login_forgetpwd">忘记密码</string>


    <!--    注册页面-->
    <string name="register">注册</string>
    <string name="rigiter_pwdAgain">再次输入</string>
    <string name="rigiter_accountLgoin">账号登录</string>
    <string name="rigiter_pwdNotCommon">两次输入密码不一致</string>

    <!-- MainActivity -->
    <string name="tab_home">首页</string>
    <string name="tab_answer">问答</string>
    <string name="tab_system">体系</string>
    <string name="tab_public">公众号</string>
    <string name="tab_mine">我的</string>
    <string name="home_search">搜索</string>
    <!--跳转到搜索界面的动画标识-->
    <string name="transition_search_back" translatable="false">transition_search_back</string>
    <string name="search_hint">请输入搜索关键字</string>
    <!-- 首页 -->
    <string name="home_tag_new">新</string>
    <string name="sacnCode_title">扫码结果</string>
    <string name="sacnCode_copy">复制</string>
    <string name="sacnCode_cancel">取消</string>
    <string name="sacnCode_clip_success">复制成功</string>
    <string name="sacnCode_clip_failure">复制失败</string>

    <!--    搜索页面-->
    <string name="search_title">搜索</string>
    <string name="search_hotkey_title">热门搜索</string>
    <string name="search_historykey_title">历史搜索</string>
    <string name="search_clear">清除</string>

    <!--体系-->
    <string name="system_title">体系</string>
    <string name="system_navigation">导航</string>

    <!-- 我的-->
    <string name="mine_userid">ID:%d</string>
    <string name="mine_level">等级:%s</string>
    <string name="mine_ranking">排名:%d</string>
    <string name="mine_integral">我的积分</string>
    <string name="integral_instruction">积分说明</string>
    <string name="mine_share">我的分享</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_waitingRead">稍后阅读</string>
    <string name="mine_readHistory">阅读历史</string>
    <string name="mine_setting">系统设置</string>

    <!--我的积分-->
    <string name="interal_title">我的积分</string>

    <!--积分排行榜-->
    <string name="rank_title">积分排行榜</string>

    <!-- 我的收藏-->
    <string name="collection_title">我的收藏</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_finalPage">已经是最后一页了</string>
    <string name="uncollection_success">取消成功</string>

    <!--    修改用户信息页面-->
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="take_photo">拍照</string>
    <string name="your_album">你的相册</string>
    <string name="select_avatar">选择头像照片</string>
    <string name="select_bg_image">选择个人封面照片</string>
    <string name="operation_failed_without_sdcard">您的手机没有SD卡，无法完成操作</string>

    <string name="confirm_to_abort_userinfo_modification">您已修改了个人信息，确定放弃保存吗？</string>
    <string name="abort">放弃</string>
    <string name="stay">留下</string>
    <string name="crop">裁剪</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_crop">完成</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_failed">裁剪失败</string>
    <string name="album_is_empty">您的相册空空如也</string>

    <!--    浏览记录-->
    <string name="title_browsehistory">浏览记录</string>
    <string name="browsehistory_clearall">清空所有</string>
    <string name="browsehistory_cancel">取消</string>
    <string name="browsehistory_sure">确定</string>
    <string name="browsehistory_clearall_hint">您确定清除所有记录吗?</string>

    <!--    X5Fragment-->
    <string name="forward_and_do_not_alert_again">继续并且不再提醒</string>
    <string name="remind">提醒</string>
    <string name="you_are_playing_big_gif_with_roaming">双击可以收藏文章，是否继续？</string>
    <string name="forward">继续</string>


    <!-- 我的分享-->
    <string name="title_share">我的分享</string>
    <string name="share_del">删除</string>

    <!--    分享文章-->
    <string name="title_createshare">分享文章</string>
    <string name="createshare_share">分享</string>
    <string name="createshare_hint_articletitle">文章标题</string>
    <string name="createshare_placeholder_articletitle">请输入文章标题(100字以内)</string>
    <string name="createshare_hint_reset_articletitle">重置标题</string>
    <string name="createshare_hint_link">文章链接</string>
    <string name="createshare_placeholder_link">如:https://www.wanandroid.com/blog/abc</string>
    <string name="createshare_hint_reset_openlink">打开链接</string>
    <string name="createshare_hint_instruction">"<ol><li>只要是任何好文都可以分享,并不一定要是原创!投递的文章都会进入广场Tab</li><li>CSDN,掘金，简书等官方博客站点会直接通过，不需要审核</li><li>其他个人站点会进入审核阶段，不要投递任何无效链接，否则可能会对你的账号产生影响</li></ol>"</string>
    <string name="createshare_notempty_articletitle">文章标题为必填</string>
    <string name="createshare_notempty_articlelink">文章链接为必填</string>

    <!--    消息通知-->
    <string name="title_notify">消息通知</string>
    <string name="notify_read">已读</string>
    <string name="notify_unread">未读</string>

<!--    系统设置-->
    <string name="setting_version">当前版本</string>
    <string name="setting_author">关于作者</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_version_tips">已是最新版本</string>
    <string name="logout_success">退出登录成功</string>


</resources>