<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.share.CreateShareActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:text="@string/createshare_hint_articletitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize_samll"
           />
        <TextView
            android:id="@+id/tv_resetTitle"
            android:text="@string/createshare_hint_reset_articletitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_samll"/>
        <EditText
            android:id="@+id/et_inputTitle"
            android:hint="@string/createshare_placeholder_articletitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:layout_marginTop="20dp"
            android:layout_alignTop="@id/tv_resetTitle"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_title">

        <TextView
            android:text="@string/createshare_hint_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize_samll"
            />
        <TextView
            android:id="@+id/tv_openLink"
            android:text="@string/createshare_hint_reset_openlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_samll"/>
        <EditText
            android:id="@+id/et_inputLink"
            android:hint="@string/createshare_placeholder_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignTop="@id/tv_openLink"
            android:background="@null"/>
    </RelativeLayout>

    <com.allen.library.SuperButton
        android:id="@+id/sb_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/createshare_share"
        android:textColor="@color/text_white"
        android:textSize="@dimen/textSize_large"
        android:layout_marginTop="60dp"
        app:sCornersRadius="25dp"
        app:sSolidColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/rl_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

/>
    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>