<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="RegisterFragBinding">

        <variable
            name="registerFrag"
            type="com.hxzk.main.ui.register.RegisterViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout

    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    tools:context=".ui.register.RegisterFragment">

<LinearLayout
    android:id="@+id/accountAreaLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/EditTextErrorAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number"
             android:text="@={registerFrag.account}"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/white_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/EditTextErrorAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_pwd"
            android:text="@={registerFrag.pwd}"

            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/white_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/EditTextErrorAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwdAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rigiter_pwdAgain"
            android:text="@={registerFrag.surePwd}"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/white_text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

<RelativeLayout
    android:id="@+id/rl_registerArea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:gravity="center_vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/accountAreaLayout">

    <TextView
        android:id="@+id/accaountLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/rigiter_accountLgoin"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        />
</RelativeLayout>

<Button
    android:id="@+id/loginButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/rl_registerArea"
    android:layout_marginTop="5dp"
    android:background="@drawable/login_button_bg"
    android:text="@string/register"
    android:textColor="@color/colorPrimary"
    android:textSize="16sp"
    android:onClick="@{() -> registerFrag.registerEvent()}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>