<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.hxzk.main.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchActivity">

        <LinearLayout
            android:id="@+id/serachll"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/back"
                android:transitionName="@string/transition_search_back" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:searchIcon="@null"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:transitionGroup="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hotkeyLL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serachll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/search_hotkey_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSize_large" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotkeyLL" />

        <RelativeLayout
            android:id="@+id/historykeyLL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchResults">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/search_historykey_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textSize_large" />
            <TextView
                android:id="@+id/tvClearHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/search_clear"
                />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>